# libgmxfort

./: CMakeLists.txt  Makefile  README.md  gmx.f90  indexfile.f90  ndx.f90  test.f90  trajectory.f90  utils.f90
cmake/: buildtype.cmake  public.cmake  version.cmake  xdrfile.cmake
example/: Makefile  main.f90
src/: CMakeLists.txt  common.f90  indexfile.f90  libgmxfort.pc.in  trajectory.f90  utils.f90
src/pkgconfig/: libgmxfort.pc.in
src/tests/: CMakeLists.txt  gmxfort_tests.f90  ndxfile.f90  ndxfile_grp.f90  read_next.f90  test.f90  utils.f90  xtcfile.f90
tests/: test.f90  test.ndx
